force-app/main/default/objects/OneCRM__Credit_Card__c/OneCRM__Credit_Card__c.object-meta.xml
<CustomObject>
    <label>Credit Card</label>
    <nameField>
        <displayFormat>CC{YYYY}{000000}</displayFormat>
        <label>Credit Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>