force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Address_Source__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Address_Source__c</fullName>
    <description>For skuid rendering purposes</description>
    <label>Address Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Replace In Skuid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>