force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Card_Number_Length__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Card_Number_Length__c</fullName>
    <formula>LEN( OneCRM__CardNumber__c )</formula>
    <label>Card Number Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>