force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Cardholder__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Cardholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cardholder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Cards</relationshipLabel>
    <relationshipName>Credit_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>