force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__CardNumber__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__CardNumber__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Encrypted hash of the credit card number. Used for recurring payments.</inlineHelpText>
    <label>Card Number (encrypted)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>