force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__City__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>