force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Company__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Company__c</fullName>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>