force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Contact_Cardholder__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Contact_Cardholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Cardholder__c&quot; field, just pointing to the Contact object instead of Account</description>
    <label>Cardholder (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Cards</relationshipLabel>
    <relationshipName>Credit_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>