force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Do_Not_Use__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Do_Not_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a credit card should not be used.</description>
    <inlineHelpText>Use this checkbox to mark a Credit Card as unusable or invalid.</inlineHelpText>
    <label>Do Not Use</label>
    <type>Checkbox</type>
</CustomField>