force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Expiration_Date__c</fullName>
    <inlineHelpText>Must be in form mm/yyyy</inlineHelpText>
    <label>Expiration Date</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>