force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Expiration_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Expiration_Date_Date__c</fullName>
    <formula>if(VALUE(LEFT(OneCRM__Expiration_Date__c ,2)) &lt;12,
DATE(
 VALUE( RIGHT( OneCRM__Expiration_Date__c ,4)),
 VALUE(LEFT( OneCRM__Expiration_Date__c ,2)) + 1 ,
 1) -1,
DATE(
 VALUE( RIGHT( OneCRM__Expiration_Date__c ,4))+1,
 1 ,
 1) -1
)</formula>
    <inlineHelpText>The date after which we can no longer use this credit card.</inlineHelpText>
    <label>Expiration Date (Date)</label>
    <type>Date</type>
</CustomField>