force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Expired__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Expired__c</fullName>
    <formula>!ISNULL(OneCRM__Expiration_Date_Date__c) &amp;&amp; OneCRM__Expiration_Date_Date__c &lt; TODAY()</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>