force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__FirstName__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>