force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Label__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>