force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Last4__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Last4__c</fullName>
    <inlineHelpText>Last four digits of the credit card used</inlineHelpText>
    <label>Last 4 Digits</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>