force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__LastName__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>