force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Latest_Income_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Latest_Income_Date__c</fullName>
    <label>Latest Income Date</label>
    <type>Date</type>
</CustomField>