force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__State__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__State__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>