force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Street__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>