force-app/main/default/objects/OneCRM__Credit_Card__c/fields/OneCRM__Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Type__c</fullName>
    <inlineHelpText>Auto-filled when the credit card number is input.</inlineHelpText>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>