force-app/main/default/objects/OneCRM__Credit_Card__c/validationRules/OneCRM__Cannot_change_Credit_Card_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Cannot_change_Credit_Card_Number</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; NOT( ISBLANK(PRIORVALUE( OneCRM__CardNumber__c ))) &amp;&amp; ISCHANGED(OneCRM__CardNumber__c)</errorConditionFormula>
    <errorDisplayField>OneCRM__CardNumber__c</errorDisplayField>
    <errorMessage>Cannot change the card number for an existing credit card.</errorMessage>
</ValidationRule>