force-app/main/default/objects/OneCRM__Credit_Card__c/validationRules/OneCRM__Card_must_lookup_to_person.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Card_must_lookup_to_person</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( OneCRM__Company__c )</errorConditionFormula>
    <errorMessage>If the cardholder is a company, the company name must be provided.</errorMessage>
</ValidationRule>