force-app/main/default/objects/OneCRM__Credit_Card__c/validationRules/OneCRM__Credit_cards_cannot_be_reassigned.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Credit_cards_cannot_be_reassigned</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED( OneCRM__Cardholder__c )</errorConditionFormula>
    <errorDisplayField>OneCRM__Cardholder__c</errorDisplayField>
    <errorMessage>Credit cards cannot be moved to different people. Please create a new card for the other person.</errorMessage>
</ValidationRule>