force-app/main/default/objects/OneCRM__Credit_Card__c/validationRules/OneCRM__Expiration_Date_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Expiration_Date_Format</fullName>
    <active>true</active>
    <description>Expiration Date must be mm/yyyy and with valid month and year components.</description>
    <errorConditionFormula>!ISNUMBER( LEFT( OneCRM__Expiration_Date__c , 2) )
||
MID(OneCRM__Expiration_Date__c,3,1) &lt;&gt; &quot;/&quot;
||
!ISNUMBER( RIGHT(OneCRM__Expiration_Date__c, 4) )
||
VALUE(LEFT( OneCRM__Expiration_Date__c , 2)) &gt;12
||
VALUE(LEFT( OneCRM__Expiration_Date__c , 2)) &lt;1
||
(ISNEW() &amp;&amp; VALUE( RIGHT(OneCRM__Expiration_Date__c, 4)) &lt; YEAR(TODAY()))
||
(ISNEW() &amp;&amp; VALUE( LEFT( OneCRM__Expiration_Date__c , 2)) &lt; MONTH(TODAY()) &amp;&amp; VALUE( RIGHT(OneCRM__Expiration_Date__c, 4)) &lt;= YEAR(TODAY()))</errorConditionFormula>
    <errorDisplayField>OneCRM__Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration Date must be in the proper format: mm/yyyy where the month is between 1 and 12. New credit cards must have expiration dates in the future.</errorMessage>
</ValidationRule>