force-app/main/default/objects/OneCRM__Credit_Card__c/validationRules/OneCRM__Last_4_digits_format.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Last_4_digits_format</fullName>
    <active>true</active>
    <description>Last 4 digits must be 4 digits and must be in the proper format</description>
    <errorConditionFormula>!ISNUMBER( OneCRM__Last4__c )
||
LEN(OneCRM__Last4__c) &lt;&gt; 4</errorConditionFormula>
    <errorDisplayField>OneCRM__Last4__c</errorDisplayField>
    <errorMessage>The last 4 digits of the credit card are required for every record.</errorMessage>
</ValidationRule>