force-app/main/default/objects/OneCRM__Credit_Card__c/listViews/OneCRM__All_Credit_Cards.listView-meta.xml
<ListView>
    <fullName>OneCRM__All_Credit_Cards</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Contact_Cardholder__c</columns>
    <columns>OneCRM__Type__c</columns>
    <columns>OneCRM__Last4__c</columns>
    <columns>OneCRM__Expiration_Date_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OneCRM__Latest_Income_Date__c</columns>
    <columns>OneCRM__Expired__c</columns>
    <columns>OneCRM__Do_Not_Use__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Credit Cards</label>
</ListView>